--- a/index.html
+++ b/index.html
@@ -50,32 +50,33 @@
             </ul>
         </section>
         <section>
+            <h2>What are we doing</h2>
             <ul>
-                <li><a href=""><img src="./images/img1.jpg" alt="imac" width="360px" height="300px"></a></li>
-                <li><a href=""><img src="./images/img2.jpg" alt="smartphone" width="360px" height="300px"></a></li>
-                <li><a href=""><img src="./images/img3.jpg" alt="smartphone in a hand" width="360px" height="300px"></a></li>
+                <li><a href=""><img src="./images/img1.jpg" alt="imac" width="360" height="300"></a></li>
+                <li><a href=""><img src="./images/img2.jpg" alt="smartphone" width="360" height="300"></a></li>
+                <li><a href=""><img src="./images/img3.jpg" alt="smartphone in a hand" width="360" height="300"></a></li>
             </ul>
         </section>
         <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/photo_MarkGuerrero.jpg" alt="Mark Guerrero photo" width="264px" height="260px">
+                    <img src="./images/photo_MarkGuerrero.jpg" alt="Mark Guerrero photo" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li><
-                    <img src="./images/photo_TomFord.jpg" alt="Tom Ford photo" width="264px" height="260px">
+                    <img src="./images/photo_TomFord.jpg" alt="Tom Ford photo" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li><
-                    <img src="./images/photo_CamilaGarcia.jpg" alt="Camila Garcia photo" width="264px" height="260px">
+                    <img src="./images/photo_CamilaGarcia.jpg" alt="Camila Garcia photo" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li><
-                    <img src="./images/photo_DanielWilson.jpg" alt="Daniel Wilson photo" width="264px" height="260px">
+                    <img src="./images/photo_DanielWilson.jpg" alt="Daniel Wilson photo" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
