--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
     <main>
         <section>
@@ -65,17 +65,17 @@
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li><
+                <li>
                     <img src="./images/photo_TomFord.jpg" alt="Tom Ford photo" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><
+                <li>
                     <img src="./images/photo_CamilaGarcia.jpg" alt="Camila Garcia photo" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><
+                <li>
                     <img src="./images/photo_DanielWilson.jpg" alt="Daniel Wilson photo" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
