--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 <body>
     <header>
         <nav>
-            <a href="">
-                <p><span>WEB</span>STUDIO</p>
-            </a>
+            <a href="./index.html">WEBSTUDIO</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>    
     </header>
     <main>
         <section>
             <h1>Effective Solutions
             for Your Business</h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
             <h2>Features</h2> <!--скрытый заголовок секции-->
@@ -52,9 +54,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><a href=""><img src="./images/img1.jpg" alt="imac" width="360" height="300"></a></li>
-                <li><a href=""><img src="./images/img2.jpg" alt="smartphone" width="360" height="300"></a></li>
-                <li><a href=""><img src="./images/img3.jpg" alt="smartphone in a hand" width="360" height="300"></a></li>
+                <li><img src="./images/img1.jpg" alt="imac" width="360" height="300"></li>
+                <li><img src="./images/img2.jpg" alt="smartphone" width="360" height="300"></li>
+                <li><img src="./images/img3.jpg" alt="smartphone in a hand" width="360" height="300"></li>
             </ul>
         </section>
         <section>
@@ -84,9 +86,7 @@
         </section>
     </main>
     <footer>
-        <a href="">
-            <p><span>WEB</span>STUDIO</p>
-        </a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business withdigital marketing & growth solutions.</p>
     </footer>    
 </body>
